--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,28 @@
-name: Deploy
-
-on:
-  push:
-    branches: [main]
-
-  workflow_dispatch:
+name: "Deployment"
+on: push
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Packages
-        run: npm install
-      - name: Deploy with gh-pages
+      - name: "Checkout"
+        uses: actions/checkout@v2
+      - name: Get yarn cache directory path # get yarn cache path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2 # cache yarn
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: "Install Dependencies"
+        run: yarn
+      - name: "Github Pages Deployment"
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+          yarn deploy -u "github-actions-bot <support+actions@github.com>"
+        if: ${{ github.ref == 'refs/heads/master' }} # only deploy master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
